--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -937,6 +937,10 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1031,6 +1035,10 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1089,7 +1097,7 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #cc2952 !important;
 }
 .cid-qTkA127IK8 {
   padding-top: 120px;
@@ -1606,6 +1614,10 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1700,6 +1712,10 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1758,7 +1774,7 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .nav-link:hover,
 .cid-qTkzRZLJNu .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #cc2952 !important;
 }
 .cid-s1wkyTQMYE {
   padding-top: 60px;
@@ -2136,6 +2152,10 @@ section.lazy-placeholder:after {
 .cid-s1vj8rFOSy .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s1vj8rFOSy .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s1vj8rFOSy .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s1vj8rFOSy .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s1vj8rFOSy .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2230,6 +2250,10 @@ section.lazy-placeholder:after {
   .cid-s1vj8rFOSy .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-s1vj8rFOSy .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s1vj8rFOSy .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-s1vj8rFOSy .navbar-collapse.collapsing .navbar-buttons,
   .cid-s1vj8rFOSy .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -2288,7 +2312,7 @@ section.lazy-placeholder:after {
 }
 .cid-s1vj8rFOSy .nav-link:hover,
 .cid-s1vj8rFOSy .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #cc2952 !important;
 }
 .cid-s1wkEMZZvX {
   padding-top: 60px;
