--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2384,7 +2384,7 @@ section.lazy-placeholder:after {
 .cid-s1B8lttbN4 {
   padding-top: 135px;
   padding-bottom: 45px;
-  background-image: url("../../../assets/images/19roundtable-combo-superjumbo-2-2000x1638.png");
+  background-image: url("../../../assets/images/19roundtable-1-2000x1638.jpeg");
 }
 .cid-s1B8lvXXUe {
   padding-top: 30px;
