--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -715,16 +715,53 @@ section.lazy-placeholder:after {
   padding-bottom: 15px;
   background-image: url("../../../assets/images/london-aerial-thames-guide.webp");
 }
-.cid-s2INg6pprV {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-s2JcBsZ8Ml {
+  padding-top: 45px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-s2INg6pprV .mbr-text {
+.cid-s2JcBsZ8Ml .mbr-section-subtitle {
   color: #767676;
 }
-.cid-s2INg6pprV .mbr-text p {
+.cid-s2JbTuDpbQ {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #efefef;
+}
+.cid-s2JbTuDpbQ .card-box {
+  padding: 0 2rem;
+}
+.cid-s2JbTuDpbQ .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-s2JbTuDpbQ .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-s2JbTuDpbQ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-s2JbTuDpbQ p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-s2JbTuDpbQ .mbr-text {
+  color: #767676;
+}
+.cid-s2JbTuDpbQ .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
   background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s2JbTuDpbQ .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
 }
 .cid-s1weHQuKqJ {
   padding-top: 30px;
@@ -747,65 +784,6 @@ section.lazy-placeholder:after {
 @media (max-width: 768px) {
   .cid-s1weHQuKqJ .inner-container {
     width: 100% !important;
-  }
-}
-.cid-s1l1tEWmWO {
-  padding-top: 30px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-s1l1tEWmWO .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-s1l1tEWmWO .mbr-content-text {
-  color: #767676;
-}
-.cid-s1l1tEWmWO .card {
-  word-wrap: break-word;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-.cid-s1l1tEWmWO .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
-.cid-s1l1tEWmWO .cards-container {
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  word-break: break-word;
-}
-.cid-s1l1tEWmWO .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-@media (min-width: 992px) {
-  .cid-s1l1tEWmWO .media-block {
-    padding-right: 2rem;
-  }
-}
-.cid-s1l1tEWmWO .cards-block {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-s1l1tEWmWO .card-img {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-@media (max-width: 991px) {
-  .cid-s1l1tEWmWO .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-left: 0;
-    padding-bottom: 2rem;
   }
 }
 .cid-s2abkdL36i {
@@ -4529,6 +4507,65 @@ section.lazy-placeholder:after {
 .cid-s2bhGldwux .nav-link:hover,
 .cid-s2bhGldwux .dropdown-item:hover {
   color: #cc2952 !important;
+}
+.cid-s2Jc9aGPdN {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s2Jc9aGPdN .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-s2Jc9aGPdN .mbr-content-text {
+  color: #767676;
+}
+.cid-s2Jc9aGPdN .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-s2Jc9aGPdN .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-s2Jc9aGPdN .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+.cid-s2Jc9aGPdN .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+@media (min-width: 992px) {
+  .cid-s2Jc9aGPdN .media-block {
+    padding-right: 2rem;
+  }
+}
+.cid-s2Jc9aGPdN .cards-block {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-s2Jc9aGPdN .card-img {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+  .cid-s2Jc9aGPdN .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
 }
 .cid-s23Qkz7nHT {
   padding-top: 135px;
