--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -711,9 +711,9 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-qTkA127IK8 {
-  padding-top: 120px;
-  padding-bottom: 30px;
-  background-image: url("../../../assets/images/london-aerial-thames-guide.webp");
+  padding-top: 105px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/mbr-1920x1080.jpg");
 }
 .cid-s2JcBsZ8Ml {
   padding-top: 45px;
@@ -726,7 +726,7 @@ section.lazy-placeholder:after {
 .cid-s2JbTuDpbQ {
   padding-top: 30px;
   padding-bottom: 60px;
-  background-color: #efefef;
+  background-color: #d7f6ec;
 }
 .cid-s2JbTuDpbQ .card-box {
   padding: 0 2rem;
