create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -711,9 +711,9 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-qTkA127IK8 {
-  padding-top: 105px;
-  padding-bottom: 60px;
-  background-image: url("../../../assets/images/mbr-1920x1080.jpg");
+  padding-top: 135px;
+  padding-bottom: 105px;
+  background-image: url("../../../assets/images/mbr-1-1920x1281.jpeg");
 }
 .cid-s2JcBsZ8Ml {
   padding-top: 45px;
