--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -713,7 +713,7 @@ section.lazy-placeholder:after {
 .cid-qTkA127IK8 {
   padding-top: 135px;
   padding-bottom: 105px;
-  background-image: url("../../../assets/images/mbr-1-1920x1281.jpeg");
+  background-image: url("../../../assets/images/mbr-1920x1706.jpg");
 }
 .cid-s2JcBsZ8Ml {
   padding-top: 45px;
