--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5115,7 +5115,7 @@ section.lazy-placeholder:after {
 }
 .cid-s2JKjAvGCO {
   padding-top: 30px;
-  padding-bottom: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-s2JKjAvGCO .mbr-section-subtitle {
@@ -5172,32 +5172,48 @@ section.lazy-placeholder:after {
     padding-bottom: 2rem;
   }
 }
-.cid-s2JKjvHLdG {
+.cid-s2JTUKzu3O {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-s2JKjvHLdG .line {
-  background-color: #149dcc;
-  color: #149dcc;
+.cid-s2JRKGyI0H {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-s2JRKGyI0H .line {
+  background-color: #ffffff;
+  color: #ffffff;
   align: center;
   height: 2px;
   margin: 0 auto;
 }
-.cid-s2JKjvHLdG .section-text {
+.cid-s2JRKGyI0H .section-text {
   padding: 2rem 0;
 }
-.cid-s2JKjvHLdG .inner-container {
+.cid-s2JRKGyI0H .inner-container {
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-s2JKjvHLdG .inner-container {
+  .cid-s2JRKGyI0H .inner-container {
     width: 100% !important;
   }
 }
+.cid-s2JRUYDULd {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #232323;
+}
+.cid-s2JRUYDULd .mbr-text {
+  color: #ffffff;
+}
+.cid-s2JRUYDULd .mbr-text p {
+  background: #232323;
+}
 .cid-s2JKjwHbv5 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #b2ccd2;
 }
 .cid-s2JKjwHbv5 .mbr-section-subtitle {
