--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5113,6 +5113,14 @@ section.lazy-placeholder:after {
   padding-bottom: 30px;
   background-image: url("../../../assets/images/london-aerial-thames-guide-1.webp");
 }
+.cid-s2JXIUAwDg {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-s2JXIUAwDg .mbr-text {
+  color: #767676;
+}
 .cid-s2JKjAvGCO {
   padding-top: 30px;
   padding-bottom: 15px;
@@ -5180,7 +5188,7 @@ section.lazy-placeholder:after {
 .cid-s2JRKGyI0H {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #232323;
 }
 .cid-s2JRKGyI0H .line {
   background-color: #ffffff;
