--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5119,12 +5119,12 @@ section.lazy-placeholder:after {
   background-color: #ffffff;
 }
 .cid-s2JXIUAwDg {
-  padding-top: 45px;
+  padding-top: 60px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-s2JXIUAwDg .mbr-text {
-  color: #767676;
+  color: #ffffff;
 }
 .cid-s2JKjAvGCO {
   padding-top: 30px;
