--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2892,47 +2892,44 @@ section.lazy-placeholder:after {
   padding-bottom: 45px;
   background-image: url("../../../assets/images/how-to-determine-your-salary-business-owner-1000x667.jpg");
 }
-.cid-s1BZYuQPyj {
+.cid-s2KbX4Mi40 {
   padding-top: 45px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-s1BZYuQPyj .mbr-section-subtitle {
-  color: #767676;
-  text-align: center;
-  font-weight: 300;
-}
-.cid-s1BZYuQPyj .step {
-  width: 64px;
-  height: 64px;
-  font-size: 32px;
-  border-radius: 50%;
-  border: 2px solid #efefef;
-}
-@media (max-width: 767px) {
-  .cid-s1BZYuQPyj .step {
-    width: 48px;
-    height: 48px;
-    font-size: 24px;
-  }
-}
-.cid-s1BZYuQPyj .separline {
-  position: relative;
-}
-.cid-s1BZYuQPyj .separline:after {
-  top: 68px;
-  left: 30px;
-  position: absolute;
-  content: "";
-  width: 2px;
-  height: calc(100% - (32px + 4px) * 2);
+  padding-bottom: 45px;
   background-color: #efefef;
 }
-@media (max-width: 767px) {
-  .cid-s1BZYuQPyj .separline:after {
-    top: 52px;
-    left: 22px;
-    height: calc(100% - 56px);
+.cid-s2KbX4Mi40 .card-img {
+  background-color: #fff;
+}
+.cid-s2KbX4Mi40 .card-box {
+  padding: 2rem;
+  background-color: #ffffff;
+}
+.cid-s2KbX4Mi40 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-s2KbX4Mi40 p {
+  text-align: left;
+}
+.cid-s2KbX4Mi40 .mbr-text {
+  color: #232323;
+}
+.cid-s2KbX4Mi40 .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s2KbX4Mi40 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+@media (min-width: 992px) {
+  .cid-s2KbX4Mi40 .my-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 15px;
+    -webkit-flex: 0 0 20%;
   }
 }
 .cid-s1B8ERusNr {
@@ -2941,8 +2938,8 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-s1B8ERusNr .line {
-  background-color: #ffffff;
-  color: #ffffff;
+  background-color: #efefef;
+  color: #efefef;
   align: center;
   height: 2px;
   margin: 0 auto;
