create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2892,6 +2892,14 @@ section.lazy-placeholder:after {
   padding-bottom: 45px;
   background-image: url("../../../assets/images/how-to-determine-your-salary-business-owner-1000x667.jpg");
 }
+.cid-s2KfhJssKm {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-s2KfhJssKm .mbr-section-subtitle {
+  color: #767676;
+}
 .cid-s2KbX4Mi40 {
   padding-top: 45px;
   padding-bottom: 45px;
