--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4034,523 +4034,53 @@ section.lazy-placeholder:after {
 .cid-s2bhGldwux .dropdown-item:hover {
   color: #cc2952 !important;
 }
-.cid-s1C1rkdSCq {
+.cid-s23Qkz7nHT {
   padding-top: 135px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/london-aerial-thames-guide.webp");
+  background-image: url("../../../assets/images/rt-selection-16-1152x768.png");
 }
-.cid-s1C1rlDWs9 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-s1C1rlDWs9 .line {
-  background-color: #149dcc;
-  color: #149dcc;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
-}
-.cid-s1C1rlDWs9 .section-text {
-  padding: 2rem 0;
-}
-.cid-s1C1rlDWs9 .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-s1C1rlDWs9 .inner-container {
-    width: 100% !important;
-  }
-}
-.cid-s1GkYRaMBk {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #b2ccd2;
-}
-.cid-s1GkYRaMBk .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-s1GkYRaMBk .btn {
-  margin: 0 0 .5rem 0;
-}
-.cid-s24tYo5J8e {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
-}
-@media (max-width: 767px) {
-  .cid-s24tYo5J8e .content {
-    text-align: center;
-  }
-  .cid-s24tYo5J8e .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-s24tYo5J8e .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-s24tYo5J8e .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-s24tYo5J8e .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-s24tYo5J8e .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-s24tYo5J8e .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-s24tYo5J8e .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-s24tYo5J8e .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-s24tYo5J8e .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-s24tYo5J8e .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-s24tYo5J8e .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-s24tYo5J8e .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-s2bhGldwux .navbar {
-  padding: .5rem 0;
-  background: #ffffff;
-  transition: none;
-  min-height: 77px;
-}
-.cid-s2bhGldwux .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
-}
-.cid-s2bhGldwux a {
-  font-style: normal;
-}
-.cid-s2bhGldwux .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-s2bhGldwux .nav-item a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-}
-.cid-s2bhGldwux .nav-item:focus,
-.cid-s2bhGldwux .nav-link:focus {
-  outline: none;
-}
-.cid-s2bhGldwux .btn {
-  padding: 0.4rem 1.5rem;
-  display: inline-flex;
-  align-items: center;
-}
-.cid-s2bhGldwux .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-s2bhGldwux .menu-logo {
-  margin-right: auto;
-}
-.cid-s2bhGldwux .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  align-items: center;
-}
-.cid-s2bhGldwux .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: -webkit-flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-s2bhGldwux .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-s2bhGldwux .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-s2bhGldwux .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-s2bhGldwux .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-s2bhGldwux .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-s2bhGldwux .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-s2bhGldwux .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-s2bhGldwux .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-s2bhGldwux .dropdown .dropdown-menu {
-  background: #ffffff;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-s2bhGldwux .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-s2bhGldwux .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-s2bhGldwux .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-s2bhGldwux .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-s2bhGldwux .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-s2bhGldwux .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-s2bhGldwux .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-s2bhGldwux .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-s2bhGldwux .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-s2bhGldwux .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-s2bhGldwux .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-s2bhGldwux button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-s2bhGldwux button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-s2bhGldwux button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-s2bhGldwux nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-s2bhGldwux nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-s2bhGldwux nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-s2bhGldwux nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-s2bhGldwux .collapsed.navbar-expand {
-  flex-direction: column;
-}
-.cid-s2bhGldwux .collapsed .btn {
-  display: flex;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse.collapsing,
-.cid-s2bhGldwux .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-s2bhGldwux .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-s2bhGldwux .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-s2bhGldwux .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-s2bhGldwux .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-s2bhGldwux .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-s2bhGldwux .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-.cid-s2bhGldwux .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-s2bhGldwux .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-s2bhGldwux .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-s2bhGldwux .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-s2bhGldwux .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-s2bhGldwux .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-s2bhGldwux .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 991px) {
-  .cid-s2bhGldwux .navbar-expand {
-    flex-direction: column;
-  }
-  .cid-s2bhGldwux img {
-    height: 3.8rem !important;
-  }
-  .cid-s2bhGldwux .btn {
-    display: flex;
-  }
-  .cid-s2bhGldwux button.navbar-toggler {
-    display: block;
-  }
-  .cid-s2bhGldwux .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-s2bhGldwux .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-s2bhGldwux .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-s2bhGldwux .navbar-collapse.collapsing,
-  .cid-s2bhGldwux .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-s2bhGldwux .navbar-collapse.collapsing .navbar-nav,
-  .cid-s2bhGldwux .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-s2bhGldwux .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-s2bhGldwux .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-s2bhGldwux .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-s2bhGldwux .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-s2bhGldwux .navbar-collapse.collapsing .navbar-buttons,
-  .cid-s2bhGldwux .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-s2bhGldwux .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-s2bhGldwux .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-s2bhGldwux .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-s2bhGldwux .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-s2bhGldwux .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-s2bhGldwux .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-s2bhGldwux .menu-logo {
-    flex-shrink: 0;
-  }
-}
-.cid-s2bhGldwux .navbar-collapse {
-  flex-basis: auto;
-}
-.cid-s2bhGldwux .nav-link:hover,
-.cid-s2bhGldwux .dropdown-item:hover {
-  color: #cc2952 !important;
-}
-.cid-s2Jc9aGPdN {
-  padding-top: 30px;
+.cid-s2KrDaMZy4 {
+  padding-top: 15px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-s2Jc9aGPdN .mbr-section-subtitle {
+.cid-s2KrDaMZy4 .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-s2Jc9aGPdN .mbr-content-text {
+.cid-s2KrDaMZy4 .mbr-content-text {
   color: #767676;
+  margin-bottom: 0;
 }
-.cid-s2Jc9aGPdN .card {
+.cid-s2KrDaMZy4 .card {
   word-wrap: break-word;
   flex-shrink: 0;
   -webkit-flex-shrink: 0;
 }
-.cid-s2Jc9aGPdN .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
+.cid-s2KrDaMZy4 .img-text {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  border: 2px solid #efefef;
+  border-radius: 50%;
 }
-.cid-s2Jc9aGPdN .cards-container {
+@media (max-width: 991px) {
+  .cid-s2KrDaMZy4 .img-text {
+    width: 48px;
+    height: 48px;
+    font-size: 24px;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s2KrDaMZy4 .cards-block {
+    border-top: 2px solid #efefef;
+  }
+}
+.cid-s2KrDaMZy4 .cards-block .card {
+  border-bottom: 2px solid #efefef;
+  border-radius: 0;
+}
+.cid-s2KrDaMZy4 .cards-container {
   display: flex;
   -webkit-flex-direction: row;
   flex-direction: row;
@@ -4560,38 +4090,15 @@ section.lazy-placeholder:after {
   justify-content: center;
   word-break: break-word;
 }
-.cid-s2Jc9aGPdN .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-@media (min-width: 992px) {
-  .cid-s2Jc9aGPdN .media-block {
-    padding-right: 2rem;
+@media (max-width: 767px) {
+  .cid-s2KrDaMZy4 .panel-item {
+    flex-direction: column;
+    align-items: center;
   }
-}
-.cid-s2Jc9aGPdN .cards-block {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-s2Jc9aGPdN .card-img {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-@media (max-width: 991px) {
-  .cid-s2Jc9aGPdN .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-left: 0;
-    padding-bottom: 2rem;
+  .cid-s2KrDaMZy4 .panel-item .card-img {
+    padding: 0;
+    padding-bottom: 1rem;
   }
-}
-.cid-s23Qkz7nHT {
-  padding-top: 135px;
-  padding-bottom: 15px;
-  background-image: url("../../../assets/images/rt-selection-16-1152x768.png");
 }
 .cid-s23QkzUYFw {
   padding-top: 60px;
