--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4036,7 +4036,7 @@ section.lazy-placeholder:after {
 }
 .cid-s23Qkz7nHT {
   padding-top: 135px;
-  padding-bottom: 15px;
+  padding-bottom: 45px;
   background-image: url("../../../assets/images/rt-selection-16-1152x768.png");
 }
 .cid-s2KrDaMZy4 {
@@ -4100,29 +4100,6 @@ section.lazy-placeholder:after {
     padding-bottom: 1rem;
   }
 }
-.cid-s23QkzUYFw {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-s23QkzUYFw .line {
-  background-color: #149dcc;
-  color: #149dcc;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
-}
-.cid-s23QkzUYFw .section-text {
-  padding: 2rem 0;
-}
-.cid-s23QkzUYFw .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-s23QkzUYFw .inner-container {
-    width: 100% !important;
-  }
-}
 .cid-s23WgfFDoY {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -4163,9 +4140,20 @@ section.lazy-placeholder:after {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-s2KuygTF3J {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #232323;
+}
+.cid-s2KuygTF3J .mbr-text {
+  color: #ffffff;
+}
+.cid-s2KuygTF3J .mbr-text p {
+  background: #232323;
+}
 .cid-s2ac0TeTQ9 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #b2ccd2;
 }
 .cid-s2ac0TeTQ9 .mbr-section-subtitle {
@@ -4177,7 +4165,7 @@ section.lazy-placeholder:after {
 .cid-s23QkBUjQH {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #2e2e2e;
+  background-color: #232323;
 }
 @media (max-width: 767px) {
   .cid-s23QkBUjQH .content {
