--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4049,7 +4049,7 @@ section.lazy-placeholder:after {
   font-weight: 300;
 }
 .cid-s2KrDaMZy4 .mbr-content-text {
-  color: #767676;
+  color: #232323;
   margin-bottom: 0;
 }
 .cid-s2KrDaMZy4 .card {
@@ -4100,6 +4100,29 @@ section.lazy-placeholder:after {
     padding-bottom: 1rem;
   }
 }
+.cid-s2KG79Gb3D {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-s2KG79Gb3D .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-s2KG79Gb3D .section-text {
+  padding: 2rem 0;
+}
+.cid-s2KG79Gb3D .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s2KG79Gb3D .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-s23WgfFDoY {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -4128,6 +4151,7 @@ section.lazy-placeholder:after {
 }
 .cid-s23WgfFDoY .mbr-text {
   color: #767676;
+  text-align: center;
 }
 .cid-s23WgfFDoY .card-wrapper {
   height: 100%;
@@ -4139,6 +4163,9 @@ section.lazy-placeholder:after {
 .cid-s23WgfFDoY .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-s23WgfFDoY .card-title {
+  text-align: center;
 }
 .cid-s2KuygTF3J {
   padding-top: 30px;
