--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -715,16 +715,28 @@ section.lazy-placeholder:after {
   padding-bottom: 105px;
   background-image: url("../../../assets/images/mbr-1920x1706.jpg");
 }
-.cid-s2JcBsZ8Ml {
-  padding-top: 45px;
+.cid-s2KUptxgBE {
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #232323;
 }
-.cid-s2JcBsZ8Ml .mbr-section-subtitle {
+.cid-s2KUptxgBE .line {
+  background-color: #ffffff;
   color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-s2JcBsZ8Ml H2 {
-  color: #ffffff;
+.cid-s2KUptxgBE .section-text {
+  padding: 2rem 0;
+}
+.cid-s2KUptxgBE .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s2KUptxgBE .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-s2JbTuDpbQ {
   padding-top: 30px;
@@ -768,6 +780,7 @@ section.lazy-placeholder:after {
 }
 .cid-s2JbTuDpbQ .card-title {
   text-align: center;
+  color: #ff3366;
 }
 .cid-s1weHQuKqJ {
   padding-top: 30px;
