--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1048,7 +1048,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1566,7 +1566,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2104,7 +2104,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2671,7 +2671,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3241,7 +3241,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3808,7 +3808,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4303,7 +4303,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4838,7 +4838,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #767676;
 }
 .cid-s2bhGldwux button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
