--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -713,7 +713,7 @@ section.lazy-placeholder:after {
 .cid-qTkA127IK8 {
   padding-top: 120px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/london-aerial-thames-guide.webp");
+  background-color: #073b4c;
 }
 .cid-s2abkdL36i {
   padding-top: 90px;
