--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3282,7 +3282,7 @@ section.lazy-placeholder:after {
 }
 .cid-s7xCJ1ciMW {
   padding-top: 105px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-s7xCJ1ciMW .mbr-text,
@@ -3290,6 +3290,72 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-s7xCJ1ciMW .mbr-text P {
+  text-align: left;
+}
+.cid-s7xYJAPDeS {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 30px;
+}
+.cid-s7xYJAPDeS .image-block {
+  margin: auto;
+}
+.cid-s7xYJAPDeS figcaption {
+  position: relative;
+}
+.cid-s7xYJAPDeS figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s7xYJAPDeS .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s7xZ2ss6Ce {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s7xZ2ss6Ce .mbr-text,
+.cid-s7xZ2ss6Ce blockquote {
+  color: #767676;
+}
+.cid-s7xZ2ss6Ce .mbr-text P {
+  text-align: left;
+}
+.cid-s7y08oHxUy {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-s7y08oHxUy .image-block {
+  margin: auto;
+}
+.cid-s7y08oHxUy figcaption {
+  position: relative;
+}
+.cid-s7y08oHxUy figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s7y08oHxUy .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s7y0iQFf86 {
+  padding-top: 105px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s7y0iQFf86 .mbr-text,
+.cid-s7y0iQFf86 blockquote {
+  color: #767676;
+}
+.cid-s7y0iQFf86 .mbr-text P {
   text-align: left;
 }
 .cid-s7xjhnTDkh .navbar {
