create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3759,6 +3759,72 @@ section.lazy-placeholder:after {
 .cid-s7xDWhxk07 .mbr-text P {
   text-align: left;
 }
+.cid-s7ygHqnSLJ {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-s7ygHqnSLJ .image-block {
+  margin: auto;
+}
+.cid-s7ygHqnSLJ figcaption {
+  position: relative;
+}
+.cid-s7ygHqnSLJ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s7ygHqnSLJ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s7ygIPe4uD {
+  padding-top: 105px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s7ygIPe4uD .mbr-text,
+.cid-s7ygIPe4uD blockquote {
+  color: #767676;
+}
+.cid-s7ygIPe4uD .mbr-text P {
+  text-align: left;
+}
+.cid-s7ygK8OeUj {
+  background: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.cid-s7ygK8OeUj .image-block {
+  margin: auto;
+}
+.cid-s7ygK8OeUj figcaption {
+  position: relative;
+}
+.cid-s7ygK8OeUj figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s7ygK8OeUj .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s7ygKQq2tE {
+  padding-top: 105px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s7ygKQq2tE .mbr-text,
+.cid-s7ygKQq2tE blockquote {
+  color: #767676;
+}
+.cid-s7ygKQq2tE .mbr-text P {
+  text-align: left;
+}
 .cid-s7xjhnTDkh .navbar {
   padding: .5rem 0;
   background: #ffffff;
