create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4216,7 +4216,7 @@ section.lazy-placeholder:after {
 }
 .cid-s7xGobcnRf {
   padding-top: 105px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-s7xGobcnRf .mbr-text,
@@ -4224,6 +4224,97 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-s7xGobcnRf .mbr-text P {
+  text-align: left;
+}
+.cid-s7yhXYspT2 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #f9f9f9;
+}
+.cid-s7yhXYspT2 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s7yhXYspT2 .container-table {
+  margin: 0 auto;
+}
+.cid-s7yhXYspT2 .scroll {
+  overflow-x: auto;
+  padding: 0;
+}
+.cid-s7yhXYspT2 .dataTables_wrapper {
+  display: block;
+}
+.cid-s7yhXYspT2 .dataTables_wrapper .search {
+  margin-bottom: .5rem;
+}
+.cid-s7yhXYspT2 .dataTables_wrapper .table {
+  overflow-x: auto;
+}
+.cid-s7yhXYspT2 table {
+  width: 100% !important;
+  margin-top: 6px;
+  border: 1px solid #cccccc;
+  margin-bottom: 0;
+}
+.cid-s7yhXYspT2 table th {
+  border-top: none;
+  transition: all .2s;
+  border-bottom: none;
+}
+.cid-s7yhXYspT2 table th:hover {
+  background: #cccccc;
+  color: #000000;
+}
+.cid-s7yhXYspT2 table td {
+  border-top: 1px solid #cccccc;
+}
+.cid-s7yhXYspT2 table.table {
+  background: #ffffff;
+}
+.cid-s7yhXYspT2 .dataTables_filter {
+  text-align: right;
+  margin-bottom: .5rem;
+}
+.cid-s7yhXYspT2 .dataTables_filter label {
+  display: inline;
+  white-space: normal !important;
+}
+.cid-s7yhXYspT2 .dataTables_filter input {
+  display: inline;
+  width: auto;
+  margin-left: .5rem;
+  border-radius: 100px;
+  padding-left: 1rem;
+}
+.cid-s7yhXYspT2 .dataTables_info {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  white-space: normal !important;
+}
+@media (max-width: 992px) {
+  .cid-s7yhXYspT2 .dataTables_filter {
+    text-align: center;
+  }
+}
+@media (max-width: 350px) {
+  .cid-s7yhXYspT2 .dataTables_filter {
+    text-align: center;
+  }
+  .cid-s7yhXYspT2 .dataTables_filter input {
+    width: 100% !important;
+    margin-left: 0 !important;
+  }
+}
+.cid-s7yjGxzMRe {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-s7yjGxzMRe .mbr-text,
+.cid-s7yjGxzMRe blockquote {
+  color: #767676;
+}
+.cid-s7yjGxzMRe .mbr-text P {
   text-align: left;
 }
 .cid-s7xjhnTDkh .navbar {
