--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5543,7 +5543,7 @@ section.lazy-placeholder:after {
 }
 .cid-s7xOHl2QA2 {
   padding-top: 105px;
-  padding-bottom: 60px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-s7xOHl2QA2 .mbr-text,
@@ -5551,6 +5551,39 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-s7xOHl2QA2 .mbr-text P {
+  text-align: left;
+}
+.cid-s7yqqd3Dau {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-s7yqqd3Dau .image-block {
+  margin: auto;
+}
+.cid-s7yqqd3Dau figcaption {
+  position: relative;
+}
+.cid-s7yqqd3Dau figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s7yqqd3Dau .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s7yqr794IX {
+  padding-top: 105px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s7yqr794IX .mbr-text,
+.cid-s7yqr794IX blockquote {
+  color: #767676;
+}
+.cid-s7yqr794IX .mbr-text P {
   text-align: left;
 }
 .cid-s7xjhnTDkh .navbar {
