create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -687,7 +687,7 @@ section.lazy-placeholder:after {
   color: #465052;
 }
 .cid-t1oqI2Hlty H2 {
-  color: #e70941;
+  color: #0f7699;
 }
 .cid-s8SuyC79P5 .navbar {
   background: #ffffff;
