create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -687,7 +687,7 @@ section.lazy-placeholder:after {
   color: #465052;
 }
 .cid-t1oqI2Hlty H2 {
-  color: #e70941;
+  color: #149dcc;
 }
 .cid-s8SuyC79P5 .navbar {
   background: #ffffff;
@@ -1113,7 +1113,7 @@ section.lazy-placeholder:after {
   color: #465052;
 }
 .cid-sXpFj8KbPF H2 {
-  color: #e70941;
+  color: #149dcc;
 }
 .cid-sWTxImW5VF {
   padding-top: 15px;
@@ -1126,7 +1126,7 @@ section.lazy-placeholder:after {
 .cid-t0gax2Dp8o {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fde5eb;
+  background-color: #e3e9ea;
 }
 .cid-sRzmoSWoTT {
   padding-top: 45px;
@@ -1137,7 +1137,7 @@ section.lazy-placeholder:after {
   color: #465052;
 }
 .cid-sRzmoSWoTT H2 {
-  color: #e70941;
+  color: #149dcc;
 }
 .cid-t0gatgcz71 {
   background: #ffffff;
@@ -1163,7 +1163,7 @@ section.lazy-placeholder:after {
 .cid-sBbs2gGSHu {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fde5eb;
+  background-color: #e3e9ea;
 }
 .cid-s9qx7uoKbX {
   padding-top: 45px;
@@ -1174,7 +1174,7 @@ section.lazy-placeholder:after {
   color: #82786e;
 }
 .cid-s9qx7uoKbX H2 {
-  color: #e70941;
+  color: #149dcc;
 }
 .cid-sRLTWm15oQ {
   padding-top: 15px;
