create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1126,7 +1126,7 @@ section.lazy-placeholder:after {
 .cid-t0gax2Dp8o {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #e3e9ea;
+  background-color: #f2f2f2;
 }
 .cid-sRzmoSWoTT {
   padding-top: 45px;
@@ -1163,7 +1163,7 @@ section.lazy-placeholder:after {
 .cid-sBbs2gGSHu {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #e3e9ea;
+  background-color: #f2f2f2;
 }
 .cid-s9qx7uoKbX {
   padding-top: 45px;
@@ -6437,33 +6437,6 @@ section.lazy-placeholder:after {
 .cid-sXBMPSKNQ7 .mbr-text DIV {
   text-align: left;
 }
-.cid-sX4cd0cR1x {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sX4cd0cR1x .mbr-text,
-.cid-sX4cd0cR1x blockquote {
-  color: #767676;
-}
-.cid-sX4cd0cR1x .mbr-text DIV {
-  text-align: left;
-}
-.cid-sX4cd0cR1x .mbr-text {
-  color: #465052;
-}
-.cid-sX4cejE9a5 {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sX4cejE9a5 .mbr-text,
-.cid-sX4cejE9a5 blockquote {
-  color: #767676;
-}
-.cid-sX4cejE9a5 .mbr-text {
-  color: #465052;
-}
 .cid-t0Plb64n6r {
   padding-top: 30px;
   padding-bottom: 15px;
@@ -6505,243 +6478,6 @@ section.lazy-placeholder:after {
 .cid-t0PldDQr4k .mbr-text {
   color: #465052;
   text-align: left;
-}
-.cid-sPGJrElUf6 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sPGJrElUf6 .mbr-text,
-.cid-sPGJrElUf6 blockquote {
-  color: #767676;
-}
-.cid-sPGJrElUf6 .mbr-text {
-  color: #465052;
-}
-.cid-sPGJXlfMsS {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sPGJXlfMsS .mbr-text,
-.cid-sPGJXlfMsS blockquote {
-  color: #767676;
-}
-.cid-sPGJXlfMsS .mbr-text {
-  color: #465052;
-}
-.cid-sPGJJquLNL {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sPGJJquLNL .mbr-text,
-.cid-sPGJJquLNL blockquote {
-  color: #767676;
-}
-.cid-sPGJJquLNL .mbr-text {
-  color: #465052;
-}
-.cid-sPGJY6nVzb {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sPGJY6nVzb .mbr-text,
-.cid-sPGJY6nVzb blockquote {
-  color: #767676;
-}
-.cid-sPGJY6nVzb .mbr-text {
-  color: #465052;
-}
-.cid-sPGJIB5bM7 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sPGJIB5bM7 .mbr-text,
-.cid-sPGJIB5bM7 blockquote {
-  color: #767676;
-}
-.cid-sPGJIB5bM7 .mbr-text {
-  color: #465052;
-}
-.cid-sX89AEZECB {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-sX89AEZECB .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-sX89AEZECB .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-sX89AEZECB .media-container-row {
-    flex-wrap: wrap-reverse;
-    -webkit-flex-wrap: wrap-reverse;
-  }
-  .cid-sX89AEZECB .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-sX89AEZECB .mbr-text {
-  color: #465052;
-  text-align: left;
-}
-.cid-sX8vVF0NTO {
-  padding-top: 0px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sX8vVF0NTO .mbr-text,
-.cid-sX8vVF0NTO blockquote {
-  color: #767676;
-}
-.cid-sX8vVF0NTO .mbr-text {
-  color: #465052;
-}
-.cid-sX8vSuuqcj {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sX8vSuuqcj .mbr-text,
-.cid-sX8vSuuqcj blockquote {
-  color: #767676;
-}
-.cid-sX8vSuuqcj .mbr-text {
-  color: #465052;
-}
-.cid-sPGJYNjQJY {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sPGJYNjQJY .mbr-text,
-.cid-sPGJYNjQJY blockquote {
-  color: #767676;
-}
-.cid-sPGJYNjQJY .mbr-text {
-  color: #465052;
-}
-.cid-sX8LLmz1JP {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sX8LLmz1JP .mbr-text,
-.cid-sX8LLmz1JP blockquote {
-  color: #767676;
-}
-.cid-sX8LLmz1JP .mbr-text {
-  color: #465052;
-}
-.cid-sX8j7VWyh7 {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-sX8j7VWyh7 .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-sX8j7VWyh7 .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-sX8j7VWyh7 .media-container-row {
-    flex-wrap: wrap-reverse;
-    -webkit-flex-wrap: wrap-reverse;
-  }
-  .cid-sX8j7VWyh7 .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-sX8j7VWyh7 .mbr-text {
-  color: #465052;
-  text-align: left;
-}
-.cid-sX9e2EPVmI {
-  padding-top: 0px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sX9e2EPVmI .mbr-text,
-.cid-sX9e2EPVmI blockquote {
-  color: #767676;
-}
-.cid-sX9e2EPVmI .mbr-text {
-  color: #465052;
-}
-.cid-sPGJHr9HZq {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sPGJHr9HZq .mbr-text,
-.cid-sPGJHr9HZq blockquote {
-  color: #767676;
-}
-.cid-sPGJHr9HZq .mbr-text {
-  color: #465052;
-}
-.cid-sX9ip3joa1 {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-sX9ip3joa1 .mbr-text,
-.cid-sX9ip3joa1 blockquote {
-  color: #767676;
-}
-.cid-sX9ip3joa1 .mbr-text {
-  color: #465052;
-}
-.cid-sX8jgWQ5iG {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-sX8jgWQ5iG .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-@media (min-width: 992px) {
-  .cid-sX8jgWQ5iG .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-sX8jgWQ5iG .media-container-row {
-    flex-wrap: wrap-reverse;
-    -webkit-flex-wrap: wrap-reverse;
-  }
-  .cid-sX8jgWQ5iG .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-sX8jgWQ5iG .mbr-text {
-  color: #465052;
-  text-align: left;
-}
-.cid-sX9e3u6M2y {
-  padding-top: 15px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-sX9e3u6M2y .mbr-text,
-.cid-sX9e3u6M2y blockquote {
-  color: #767676;
-}
-.cid-sX9e3u6M2y .mbr-text {
-  color: #465052;
 }
 .cid-sX8nMEMD0p {
   padding-top: 30px;
@@ -6931,30 +6667,6 @@ section.lazy-placeholder:after {
   text-align: left;
 }
 .cid-t1szT0g3PA .mbr-text {
-  color: #465052;
-}
-.cid-sXskVMSzx4 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #abe0f1;
-}
-.cid-sXskVMSzx4 .mbr-text,
-.cid-sXskVMSzx4 blockquote {
-  color: #767676;
-}
-.cid-sXskVMSzx4 .mbr-text {
-  color: #465052;
-}
-.cid-sXslSfkWrd {
-  padding-top: 15px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-sXslSfkWrd .mbr-text,
-.cid-sXslSfkWrd blockquote {
-  color: #767676;
-}
-.cid-sXslSfkWrd .mbr-text {
   color: #465052;
 }
 .cid-sPGLMfvdIU {
@@ -7737,7 +7449,7 @@ section.lazy-placeholder:after {
 .cid-sV9fCveM2l {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #fde5eb;
+  background-color: #f2f2f2;
 }
 .cid-sV9fCvPJqf {
   padding-top: 0px;
@@ -7901,15 +7613,6 @@ section.lazy-placeholder:after {
   color: #767676;
   text-align: left;
 }
-.cid-sXrzUp0EzT {
-  padding-top: 0px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-sXrzUp0EzT .mbr-text,
-.cid-sXrzUp0EzT blockquote {
-  color: #767676;
-}
 .cid-sV9fCwtkTZ {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -7936,7 +7639,7 @@ section.lazy-placeholder:after {
 .cid-sV9fCwEF7v {
   padding-top: 30px;
   padding-bottom: 45px;
-  background-color: #fde5eb;
+  background-color: #f2f2f2;
 }
 .cid-t8ZKvLtMHh {
   padding-top: 60px;
