create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -693,7 +693,7 @@ section.lazy-placeholder:after {
 .cid-te11zeVEEc .section-text {
   padding: 2rem 0;
   text-align: center;
-  color: #e70941;
+  color: #149dcc;
 }
 .cid-te11zeVEEc .inner-container {
   margin: 0 auto;
@@ -949,7 +949,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s8SuyC79P5 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-s8SuyC79P5 .collapsed button.navbar-toggler {
@@ -1523,7 +1523,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s8SuyC79P5 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-s8SuyC79P5 .collapsed button.navbar-toggler {
@@ -2174,7 +2174,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-s8SuyC79P5 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-s8SuyC79P5 .collapsed button.navbar-toggler {
@@ -2698,7 +2698,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sbu83z5ule .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sbu83z5ule .collapsed button.navbar-toggler {
@@ -3223,7 +3223,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sRulsfezcJ .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sRulsfezcJ .collapsed button.navbar-toggler {
@@ -3735,7 +3735,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sWuBxnQTQC .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sWuBxnQTQC .collapsed button.navbar-toggler {
@@ -4608,7 +4608,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sV9fCt33w1 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sV9fCt33w1 .collapsed button.navbar-toggler {
@@ -5103,7 +5103,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sXItdKJEHA .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sXItdKJEHA .collapsed button.navbar-toggler {
@@ -5598,7 +5598,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sXIzSrbK5O .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sXIzSrbK5O .collapsed button.navbar-toggler {
@@ -6093,7 +6093,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sPGIAcn6zW .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sPGIAcn6zW .collapsed button.navbar-toggler {
@@ -6958,7 +6958,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-sV9fCt33w1 .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-sV9fCt33w1 .collapsed button.navbar-toggler {
@@ -7877,7 +7877,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-te09ViTp6V .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.6rem);
+    max-height: calc(98.5vh - 5.3rem);
   }
 }
 .cid-te09ViTp6V .collapsed button.navbar-toggler {
