--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -693,7 +693,7 @@ section.lazy-placeholder:after {
 .cid-te11zeVEEc .section-text {
   padding: 2rem 0;
   text-align: center;
-  color: #149dcc;
+  color: #0b9ed0;
 }
 .cid-te11zeVEEc .inner-container {
   margin: 0 auto;
